--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  display:flex;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: linear-gradient(269.26deg,#c24fb6 6.59%,#3f51b8 94.04%);
 }
 
-.App-link {
-  color: #61dafb;
+.auth-form-container, .login-form, .register-form{
+  display: flex;
+  flex-direction: column;
+  
+  
+
+}
+@media screen and (min-width:600px) {
+  .auth-form-container{
+    padding:5rem;
+    border: 1px solid white;
+    border-radius: 10px;
+    margin: 0.5rem;
+  }
+  
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+label{
+  text-align: left;
+  padding: 0.25rem 0;
+
+}
+
+input{
+  margin: 0.5rem 0;
+  padding: 1rem;
+  border:none;
+  border-radius: 10px;
+}
+
+button{
+  border:none;
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #a51396;
+}
+
+.link-btn{
+  background: none;
+  color:rgb(0, 0, 0);
+  text-decoration: underline;
+}
+
+h2{
+  color: white ;
 }
